fix(search): add a close button below the input on mobile

--- a/themes/shiro/assets/src/sass/css/scss/objects/_search.scss
+++ b/themes/shiro/assets/src/sass/css/scss/objects/_search.scss
@@ -14,6 +14,7 @@
 .search-container {
   width: 550px;
   margin: 140px auto;
+  display: block;
 
   @media (max-width: $medium-bp) {
     width: 300px;
@@ -39,6 +40,10 @@
     width: 46px;
     margin-top: 5px;
     margin-left: -48px;
+
+    @media (max-width: $medium-bp) {
+      margin-left: -52px;
+    }
   }
 
   .search-close-esc {
@@ -55,6 +60,22 @@
 
     &:hover {
       opacity: 1;
+    }
+
+    @media (max-width: $medium-bp) {
+      display: none;
+    }
+  }
+
+  .search-close-mobile {
+    display: none;
+    width: 100%;
+    text-align: center;
+    margin-top: 100px;
+    opacity: 0.5;
+
+    @media (max-width: $medium-bp) {
+      display: block;
     }
   }
 }
@@ -124,13 +145,9 @@
 }
 
 .search-container {
-  display: flex;
-  justify-content: end;
-
   @media (min-width: 1024px) {
     position: relative;
   }
-
 }
 
 .search-bar-container {
